<resources>
    <string name="app_name">Securecom Voice</string>
    <string name="RedPhone_id_like_to_call_you_securely_using_redphone_you_can_install_redphone_from_the_play_store_s">I\'d like to call you securely using Securecom Voice. You can install Securecom Voice from the Play Store: %s</string>
    <string name="RedPhone_answering">Answering...</string>
    <string name="RedPhone_ending_call">Ending call</string>
    <string name="RedPhone_dialing">Dialing...</string>
    <string name="RedPhone_cancelling_call">Cancelling call</string>
    <string name="RedPhone_call_rejected">Call rejected</string>
    <string name="RedPhone_ringing">Ringing...</string>
    <string name="RedPhone_busy">Busy...</string>
    <string name="RedPhone_connected">Connected</string>
    <string name="RedPhone_reconnecting">Reconnecting...</string>
    <string name="RedPhone_connecting">Connecting...</string>
    <string name="RedPhone_connected_sending">Connected, sending...</string>
    <string name="RedPhone_connected_waiting">Connected, waiting...</string>
    <string name="RedPhone_handshake_failed_exclamation">Handshake failed!</string>
    <string name="RedPhone_recipient_unavailable">Recipient unavailable</string>
    <string name="RedPhone_performing_handshake">Performing handshake...</string>
    <string name="RedPhone_server_failed_exclamation">Server failed!</string>
    <string name="RedPhone_client_failed">Client failed</string>
    <string name="RedPhone_login_failed_exclamation">Login failed!</string>
    <string name="RedPhone_message_from_the_server">Message from the server:</string>
    <string name="RedPhone_number_not_registered_with_redphone_exclamation">Number not registered with Securecom Voice!</string>
    <string name="RedPhone_the_number_you_dialed_is_not_registered_with_redphone_both_parties_of_a_call_need_to_have_redphone_installed">The number you dialed is not registered with Securecom Voice.  Both parties of a call need to have Securecom Voice installed in order to have a secure conversation.  Would you like to send a Securecom Voice install link to the contact you were trying to dial?</string>
    <string name="RedPhone_no_thanks_exclamation">No thanks!</string>
    <string name="RedPhone_yes_exclamation">Yes!</string>
    <string name="RedPhone_codec_failed_to_initialize">Codec Failed to Initialize</string>
    <string name="RedPhoneService_missed_redphone_call">Missed Securecom Voice Call</string>
    <string name="MicrophoneReader_microphone_failed_to_initialize_try_changing_audio_call_mode_in_settings">Microphone failed to initialize.  Try changing Audio Call Mode in Settings?</string>
    <string name="RobustAudioTrack_audiotrack_did_not_initialize">AudioTrack did not initialize</string>
    <string name="AboutActivity_about_redphone">About Securecom Voice</string>
    <string name="AboutActivity_redphone_beta_s">Securecom Voice Beta %s</string>
    <string name="ApplicationPreferencesActivity_redphone_settings">Securecom Voice Settings</string>
    <string name="ApplicationPreferencesActivity_updating_signaling_method">Updating Signaling Method</string>
    <string name="ApplicationPreferencesActivity_changing_signaling_method_this_could_take_a_second">Changing signaling method, this could take a second...</string>
    <string name="ApplicationPreferencesActivity_error_registering_with_c2dm_server">Error registering with C2DM server...</string>
    <string name="ApplicationPreferencesActivity_error_unregistering_with_c2dm_server">Error unregistering with C2DM server...</string>
    <string name="ApplicationPreferencesActivity_error_communicating_with_c2dm_server">Error communicating with C2DM server...</string>
    <string name="CallMetricsInfo__metrics_collection_details">To help improve call quality, you can choose to send Open WhisperSystems information that will help us to better understand Securecom Voice\'s performance.  This data is never visible to a third party.  All call metrics data is encrypted before it is stored or uploaded to Open WhisperSystem\'s servers.  When enabled, the following information is collected during each call:</string>
    <string name="CallMetricsInfo__title">Quality Metrics</string>
    <string name="CallMetricsInfo__device_description">Device Description</string>
    <string name="CallMetricsInfo__device_description_explanation">Model, manufacturer, carrier, connection type, OS version, persistent random UUID</string>
    <string name="CallMetricsInfo__mic_and_codec_performance">Microphone and Codec Performance</string>
    <string name="CallMetricsInfo__mic_and_codec_performance_explanation">Mic clipping, dropped audio samples, average call volume</string>
    <string name="CallMetricsInfo__packet_arrival">Packet arrival interval histogram</string>
    <string name="CallMetricsInfo__packet_arrival_explanation">Provides data on network latency jitter</string>
    <string name="CallMetricsInfo__out_of_order_arrival">Out of order arrival counts</string>
    <string name="CallMetricsInfo__out_of_order_arrival_explanation">Tracks packet delivery irregularities</string>
    <string name="CallMetricsInfo__audio_gap_fill_counts">Audio Gap Fills</string>
    <string name="CallMetricsInfo__audio_gap_fill_counts_explanation">Indicates when missing data required audio to be synthesized</string>
    <string name="CallMetricsInfo__system_metrics">System Metrics</string>
    <string name="CallMetricsInfo__system_metrics_explanation">CPU load, memory usage</string>
    <string name="CallQualityDialog_call_feedback">Call Feedback</string>
    <string name="CallQualityDialog_call_quality">Call Quality</string>
    <string name="CallQualityDialog_call_quality_rating">Call Quality Rating</string>
    <string name="CallQualityDialog__i_would_like_to_help_by_sending_performance_statistics">Send performance metrics</string>
    <string name="CallQualityDialog__i_would_like_to_rate_the_quality_of_my_call_once_it_is_over">Allow me to rate calls after they complete</string>
    <string name="CallQualityDialog__provide_call_quality_feedback">Provide call quality feedback</string>
    <string name="CallQualityDialog__redphone">Securecom Voice</string>
    <string name="CallQualityDialog__we_re_making_changes">We\'re Making Changes</string>
    <string name="CallQualityDialog__whispersystems_needs_your_help_pretext">Open WhisperSystems needs your help. As we work to improve the quality of our calls, we need feedback and performance metrics to improve the system. </string>
    <string name="CallQualityDialog__linktext">Learn more about data collection</string>
    <string name="CallQualityDialog__you_can_update_these_settings_at_any_time_through_the_general_settings_menu">You can update these preferences at any time through the Securecom Voice settings menu</string>
    <string name="CallQualityDialog__please_rate_the_audio_quality_of_the_call_below">Please rate the quality of this call</string>
    <string name="CallQualityDialog__submit">Submit</string>
    <string name="CallQualityDialog__select_the_issues_that_affected_this_call">Select the issues that affected this call</string>
    <string name="CallQualityDialog__done">Done</string>
    <string name="about_activity__additional_information">Additional information:</string>
    <string name="about_activity__attribution">Attribution:</string>
    <string name="about_activity__aboutText">Copyright 2015 Securecom. Licensed under the GPL version 3</string>
    <string name="about_activity__attributionText">Redphone Copyright 2012-2015 Open WhisperSystems. Licensed under the GPL version 3. \n\nSecurecom Voice links to the SpanDSP library, which is licensed under the LGPL.\n\nSecurecom Voice uses the SPEEX Codec, which is used under the Xiph.Org variant of the BSD license: © 2002-2003, Jean-Marc Valin/Xiph.Org Foundation\n\nRedistribution and use of the SPEEX library in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n\n\t* Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n\t* Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n\t* Neither the name of the Xiph.org Foundation nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.\n\nThe SPEEX library is provided by the copyright holders and contributors “as is” and any express or implied warranties, including, but not limited to, the implied warranties of merchantability and fitness for a particular purpose are disclaimed. In no event shall the foundation or contributors be liable for any direct, indirect, incidental, special, exemplary, or consequential damages (including, but not limited to, procurement of substitute goods or services; loss of use, data, or profits; or business interruption) however caused and on any theory of liability, whether in contract, strict liability, or tort (including negligence or otherwise) arising in any way out of the use of this software, even if advised of the possibility of such damage.\n\n\nSome sound samples are licensed under the Creative Commons Sampling Plus License: http://creativecommons.org/licenses/sampling+/1.0/\n\nBy acclivity (http://www.freesound.org/usersViewSingle.php?id=37876):\nShipsBell.wav (http://www.freesound.org/samplesViewSingle.php?id=32304)\n\nBy Splashdust (http://www.freesound.org/usersViewSingle.php?id=754949):\nnegativebeep.wav (http://www.freesound.org/samplesViewSingle.php?id=67454)\n\nBy Peter_Gross (http://www.freesound.org/usersViewSingle.php?id=33429):\nSonar_pings.ogg (http://www.freesound.org/samplesViewSingle.php?id=12677\n\nBy suonho: http://www.freesound.org/samplesViewSingle.php?id=58348: ambienta_soundtrack_moog_sweep\n\nBy Mike Koenig: Busy Signal</string>
    <string name="preferences__general_settings">General Settings</string>
    <string name="preferences__prompt_for_call_upgrade">Prompt for call upgrade</string>
    <string name="preferences__when_making_insecure_calls_prompt_for_upgrade_to_redphone_if_contact_is_redphone_enabled">When making insecure calls, prompt for upgrade to Securecom Voice if contact is Securecom Voice-enabled.</string>
    <string name="preferences__advanced_signaling_settings">Advanced: Signaling Settings</string>
    <string name="preferences__advanced_audio_settings">Advanced: Audio Settings</string>
    <string name="preferences__enable_audio_compatibility_mode_higher_latency">Enable Audio Compatibility Mode [higher latency]</string>
    <string name="preferences__compatibility_mode">Compatibility Mode</string>
    <string name="preferences__use_in_call_audio_mode">Use In-Call Audio Mode</string>
    <string name="preferences__enable_if_audio_comes_from_rear_speaker">Enable if audio comes from rear speaker</string>
    <string name="preferences__single_thread_mode">Single-Thread Mode</string>
    <string name="preferences__may_improve_performance_on_some_devices">May improve performance on some devices</string>
    <string name="preferences__force_minimum_latency">Force minimum latency</string>
    <string name="preferences__reduce_latency_at_the_expense_of_audio_quality">Reduce latency at the expense of audio quality</string>
    <string name="preferences__signaling_method">Signaling Method</string>
    <string name="preferences__modify_the_method_used_to_notify_your_device_of_incoming_calls">Modify the method used to notify your device of incoming calls.</string>
    <string name="preferences__disable_bluetooth">Enable Bluetooth</string>
    <string name="preferences__disable_bluetooth_summary">Disabling Bluetooth may resolve audio issues on some devices</string>
</resources>