<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="16dip"
            android:paddingRight="16dip">

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation= "vertical">

        <TextView android:id="@+id/versionText"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:layout_marginTop="20dip"
                  android:gravity="center" />

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:layout_marginBottom="20dip"
                  android:layout_marginTop="20dip"
                  android:text="@string/about_activity__additional_information"/>

        <TextView android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:text="@string/about_activity__aboutText"/>

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:layout_marginBottom="20dip"
                  android:layout_marginTop="20dip"
                  android:text="@string/about_activity__attribution"/>

        <TextView android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:text="@string/about_activity__attributionText"/>

    </LinearLayout>
</ScrollView>
