<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dip"
                android:paddingRight="10dip"
                android:baselineAligned="false">

    <ScrollView android:layout_alignParentTop="true"
                android:layout_above="@+id/button_frame"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:paddingTop="5dip"
                android:paddingBottom="12dip">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/Registration.Description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/CallMetricsInfo__metrics_collection_details" />
            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        style="@style/Registration.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="•" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/Registration.Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CallMetricsInfo__device_description"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/Registration.Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dip"
                            android:text="@string/CallMetricsInfo__device_description_explanation" />
                    </LinearLayout>
                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/Registration.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="•" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/Registration.Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CallMetricsInfo__mic_and_codec_performance"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/Registration.Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dip"
                            android:text="@string/CallMetricsInfo__mic_and_codec_performance_explanation" />
                    </LinearLayout>
                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/Registration.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="•" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/Registration.Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CallMetricsInfo__packet_arrival"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/Registration.Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dip"
                            android:text="@string/CallMetricsInfo__packet_arrival_explanation" />
                    </LinearLayout>
                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/Registration.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="•" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/Registration.Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CallMetricsInfo__out_of_order_arrival"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/Registration.Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dip"
                            android:text="@string/CallMetricsInfo__out_of_order_arrival_explanation" />
                    </LinearLayout>
                </TableRow>


                <TableRow>
                    <TextView
                        style="@style/Registration.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="•" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/Registration.Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CallMetricsInfo__audio_gap_fill_counts"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/Registration.Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dip"
                            android:text="@string/CallMetricsInfo__audio_gap_fill_counts_explanation" />
                    </LinearLayout>
                </TableRow>


                <TableRow>
                    <TextView
                        style="@style/Registration.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="•" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/Registration.Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CallMetricsInfo__system_metrics"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/Registration.Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dip"
                            android:text="@string/CallMetricsInfo__system_metrics_explanation" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout android:id="@+id/button_frame"
                  android:layout_alignParentBottom="true"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:minHeight="54dip"
                  android:orientation="vertical"
                  android:gravity="center">

        <Button android:id="@+id/close_button"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@android:string/ok"/>
    </LinearLayout>
</RelativeLayout>