<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/topLevelLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="0dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/optInCheckBox"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:text="@string/CallQualityDialog__i_would_like_to_help_by_sending_performance_statistics" />

        <CheckBox
            android:id="@+id/enableDialogCheckBox"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/optInCheckBox"
            android:layout_weight="0.00"
            android:text="@string/CallQualityDialog__i_would_like_to_rate_the_quality_of_my_call_once_it_is_over" />

        <TextView
            android:id="@+id/moreInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enableDialogCheckBox"
            android:layout_weight="0.01"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/CallQualityDialog__you_can_update_these_settings_at_any_time_through_the_general_settings_menu"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/doneDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below = "@+id/moreInfo"
            android:layout_centerHorizontal="true"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/CallQualityDialog__done"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
</ScrollView>