<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/issueLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CallQualityDialog__select_the_issues_that_affected_this_call"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentTop="true"
            />

        <LinearLayout
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/issueLabel"/>

        <TextView
            android:id="@+id/ratingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CallQualityDialog__please_rate_the_audio_quality_of_the_call_below"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@android:id/list"
            />

        <RatingBar
            android:id="@+id/callRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:numStars="4"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ratingLabel"
            />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CallQualityDialog__submit"
            android:layout_below="@id/callRatingBar"
            />
    </RelativeLayout>
</ScrollView>